Create docker-compose file

--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
-PORT=5001
+PORT=5000
+COMPANY=networkoptix-metavms
+MEDIASERVER_VERSION=6.0.0.38678
+MEDIASERVER_URL=https://beta.networkoptix.com/beta-builds/metavms/6.0.0.38678/linux/metavms-server-6.0.0.38678-linux_x64-private-test.deb
+MEDIASERVER_PORTS=7002:7002
+VOLUMES_PATH=/srv/mediaserver
