--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,24 @@
-## Copyright 2018-present Network Optix, Inc. Licensed under MPL 2.0: www.mozilla.org/MPL/2.0/
-
 version: "3"
 services:
-  mediaserver:
+  elevator: 
     build:
       context: .
+    image: "contactless-elevator"
+    container_name: "contactless-elevator"
+    ports:
+      - ${PORT}:${PORT}
+
+  mediaserver:
+    build:
+      context: ./nxvms-docker
       args:
         COMPANY: ${COMPANY}
         MEDIASERVER_DEB: ${MEDIASERVER_URL}
     image: metavms-server:${MEDIASERVER_VERSION}
+    container_name: mediaserver
     user: ${COMPANY}
     ports:
-      - ${PORTS}
-    # To use the host network mode, comment out the ports above and uncomment the line below.
-    # network_mode: "host"
+      - ${MEDIASERVER_PORTS}
     volumes:
       - ${VOLUMES_PATH}/etc:/opt/${COMPANY}/mediaserver/etc
       - ${VOLUMES_PATH}/var:/opt/${COMPANY}/mediaserver/var
@@ -24,8 +29,8 @@ services:
 
   mediaserver-root-tool:
     image: metavms-server:${MEDIASERVER_VERSION}
+    container_name: root_tool
     user: root
-    # root-tool-bin is for versions < 4.3, root-tool is for versions >= 4.3.
     command: ["/opt/${COMPANY}/mediaserver/bin/root-tool"]
     volumes:
       - ${VOLUMES_PATH}/tmp:/tmp
